--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
   <head>
-    <title>todo</titile>
+      <TITLE>TODO LIST</TITLE>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <style>
-      h1{
+      .h{
         padding:30px;
       }
       
@@ -63,7 +63,7 @@ i:nth-child(even)
   <body>
     
     <div class="container">
-      <h1>TO DO LIST</h1>
+      <h1 class="h">TO DO LIST</h1>
   <input id="todo" type="text" value=""><br>
     <input onclick="addtodo()" type="submit" value="Submit"><br>
 
